# codegenr

./: .gitignore  .gitpod.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  graphql.config.yaml  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: dev.yaml  main.yaml
_assets/: README.md
_features/: codegen_graph.md
codegenr/: Cargo.toml
codegenr-cli/: Cargo.toml
codegenr-cli/src/: main.rs
codegenr-lib/: Cargo.toml
codegenr-lib/_samples/merger/: petstore-minimal.json
codegenr-lib/_samples/render/test3/expected/: complete_paths2.cs
codegenr-lib/_samples/render/test4/template3/: path4.hbs
codegenr-lib/_samples/render/test_denis/: data.json  main.hbs
codegenr-lib/_samples/resolver/: Merge1_rest.json
codegenr-lib/src/: custom.rs  errors.rs  lib.rs  loader.rs  render.rs  resolver.rs
codegenr-lib/src/helpers/: cases.rs  debug.rs  distinct.rs  json.rs  openapi3.rs  string_ext.rs  strings.rs
codegenr-lib/src/processor/: file.rs  mod.rs
codegenr/_samples/: Merge1.yaml  Merge2B.yaml  Merge2C.yaml  petshop.yaml  simple1.yaml  simple2.json  simple3.yaml  simple4.json
codegenr/_samples/graphql/: schema.graphql  schema_generated.graphql
codegenr/_samples/merger/: example-minimal.json  example-minimal2.json
codegenr/_samples/render/simple_files/: Merge1_expected.yaml
codegenr/_samples/render/test0/: exception.hbs  template.cshtml
codegenr/_samples/render/test1/: schema.json
codegenr/_samples/render/test1/expected/: test2.csv
codegenr/_samples/render/test1/template/: test.hbs
codegenr/_samples/render/test2/template/: enums.hbs
codegenr/_samples/render/test3/: sample_swagger.json
codegenr/_samples/render/test3/expected/: complete_path1.cs  errorReporting_path1.cs  errorReporting_paths2.cs  events_path1.cs  events_paths2.cs  ping_path1.cs  ping_paths2.cs  start_path1.cs  start_paths2.cs  status_path1.cs  status_paths2.cs
codegenr/_samples/render/test4/template2/: path1.hbs  path2.hbs
codegenr/_samples/render/test4/template4/: path3.hbs
codegenr/_samples/render/test_denis/: main.hbs
codegenr/_samples/resolver/: Merge1.yaml  Merge2A.yaml  petshop_externals.yaml  petshop_with_external.yaml  simple3.yaml  simple4.json
codegenr/_samples/rhai/: concat.rhai  param_0_len.rhai
codegenr/examples/: handlebars_conf.rs
codegenr/src/: custom.rs  custom_helpers.rs  errors.rs  filesystem.rs  lib.rs  loader.rs  main.rs  opt.rs  render.rs  resolver.rs  transformer.rs
codegenr/src/custom/: debug.rs  empty.rs  equals.rs  getset.rs  handlebars_ext.rs  math.rs  mod.rs  string_ext.rs  strings.rs
codegenr/src/helpers/: cases.rs  debug.rs  distinct.rs  empty.rs  equals.rs  getset.rs  handlebars_ext.rs  json.rs  math.rs  mod.rs  openapi3.rs  params.rs  regex.rs  string_ext.rs  strings.rs
codegenr/src/loaders/: document_path.rs  graphql.rs  json.rs  mod.rs  toml.rs  xml.rs  yaml.rs
codegenr/src/processor/: clean.rs  console.rs  file.rs  mod.rs
examples/readme/: .gitignore  codegenr.toml
examples/readme/helpers/: range.rhai
examples/readme/specs/: other.yaml  some_openapi_file.yaml
examples/readme/templates/rest-tests/: template.hbs
workflows/: dev.yaml
