[package]
name = "codegenr-lib"
version = "0.0.1"
edition = "2021"
authors = ["Jérôme Rx & contributors <jerome@eventuallyconsultant.com>"]
description = "Fast json/yaml/openapi code generator based on handlebars templating."
readme = "../README.md"
homepage = "https://github.com/eventuallyconsultant/codegenr/"
repository = "https://github.com/eventuallyconsultant/codegenr/"
keywords = ["codegen", "openapi", "api-first", "contract-first", "api"]
categories = ["development-tools"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Errors
thiserror = "1.0.30"
# File loading & path manipulations
url = "2.2.2"
path-dedot = "3.0.14"
reqwest = { version = "0.11", features = ["blocking"] }
walkdir = "2"
glob = "0.3"
# Json & Yaml manipulation
serde_json = { version = "1.0.68", features = ["preserve_order"] }
serde_yaml = "0.8.21"
serde = "1.0.68"
# Templating
handlebars = { version = "4.1.3", features =  ["script_helper"] }
# Regex
regex = "1"
once_cell = "1.8.0"
# Custom scripting
rhai = "1.2.1"

[dev-dependencies]
test-case = "1.2.1"
tempdir = "0.3"
anyhow = "1.0.44"