[package]
name = "codegenr"
version = "0.0.1"
edition = "2021"
authors = ["Jérôme Rx & contributors <jerome@eventuallyconsultant.com>"]
description = "Fast json/yaml/openapi code generator based on handlebars templating."
readme = "../README.md"
homepage = "https://github.com/eventuallyconsultant/codegenr/"
repository = "https://github.com/eventuallyconsultant/codegenr/"
keywords = ["codegen", "openapi", "api-first", "contract-first", "api"]
categories = ["development-tools"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegenr-lib = { path="../codegenr-lib", version = "0.0.1" }

tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [] }

structopt = "0.3.23"
anyhow = "1.0.44"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
toml = "0.5.8"
