[package]
name = "codegenr"
version = "0.0.3"
edition = "2021"
authors = ["Jérôme Rx & contributors <jerome@eventuallyconsultant.com>"]
description = "Fast json/yaml/openapi code generator based on handlebars templating."
readme = "../README.md"
homepage = "https://github.com/eventuallyconsultant/codegenr/"
repository = "https://github.com/eventuallyconsultant/codegenr/"
keywords = ["codegen", "openapi", "api-first", "contract-first", "api"]
categories = ["development-tools"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "codegenr_lib"
path = "src/lib.rs"

[[bin]]
name = "codegenr"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["tracing-subscriber", "structopt", "anyhow", "toml"]

[dependencies]
# ========================================================================================
#                         Binary dependencies
# ========================================================================================
tracing-subscriber = { version = "0.3", features = [], optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
toml = { version = "0.7", optional = true }

# ========================================================================================
#                         Common dependencies
# ========================================================================================
# Logging
tracing = { version = "0.1", features = ["log"] }
# Errors
thiserror = "1.0"
# File loading & path manipulations
url = "2.4"
path-dedot = "3.1"
reqwest = { version = "0.11", features = ["blocking"] }
walkdir = "2"
glob = "0.3"
# Json / Yaml / OpenApi / Graphql manipulation
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8"                                              # 0.9 failing with deserializing from YAML containing more than one document is not supported on most files
serde = "1.0"
graphql-parser = "0.4"

# Templating
handlebars = { version = "4.3", features = ["script_helper"] }
handlebars_misc_helpers = { version = "0.13", features = ["default"] }
# Regex
regex = "1"
once_cell = "1.16"
# Custom scripting
rhai = "1.15"

[dev-dependencies]
test-case = "3.1"
tempdir = "0.3"
anyhow = "1.0"
